# hybrid_search_chatbot

./: README.md  hybrid_search_scratch.py  pyproject.toml  web.py
hybrid_search/: app.py  model.py  processing_pdf.py  requirements.txt
