[project]
name = "vector-database"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb==0.4.24",
    "google-generativeai>=0.3.0",
    "numpy==1.26.4",
    "ollama>=0.6.2",
    "pypdf>=6.14.2",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.6.0",
    "streamlit>=1.28.0",
]
